setup gulp build

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "browser-sync": "^2.27.7",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-replace": "^1.1.3"
   }
 }
