--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
   "name": "gsap-cursor",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "JavaScript + GreenSock customize mouse cursor with inertia for modern browsers.",
-  "main": "index.js",
-  "author": "Felix Bui",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:phucbm/cursorjs"
+  },
+  "author": {
+    "name": "phucbm",
+    "email": "hiphucbui@gmail.com",
+    "url": "https://buiminhphuc.com/"
+  },
+  "keywords": [
+    "gsap",
+    "cursor"
+  ],
   "license": "MIT",
+  "main": "./dist/gsap-cursor.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
+    "umd": "cross-env NODE_ENV=production webpack --config config/webpack.umd.js",
     "lint": "eslint 'src/**/*.js' || true",
     "prettify": "prettier --write 'src/**/*.js'"
   },
-  "keywords": [
-    "webpack",
-    "webpack 5",
-    "webpack boilerplate"
-  ],
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/preset-env": "^7.15.8",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^9.0.1",
+    "copy-webpack-plugin": "^9.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
@@ -44,10 +52,6 @@
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
     "webpack-merge": "^5.8.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:phucbm/cursorjs"
   },
   "dependencies": {
     "gsap": "^3.10.4"
