--- a/package.json
+++ b/package.json
@@ -18,11 +18,8 @@
   "license": "MIT",
   "main": "./dist/gsap-cursor.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-    "umd": "cross-env NODE_ENV=production webpack --config config/webpack.umd.js",
-    "lint": "eslint 'src/**/*.js' || true",
-    "prettify": "prettier --write 'src/**/*.js'"
+    "dev": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
+    "dist": "cross-env NODE_ENV=production webpack --config config/webpack.umd.js"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -35,19 +32,15 @@
     "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
     "dat.gui": "^0.7.9",
-    "eslint": "^7.28.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-webpack": "^0.13.1",
-    "eslint-plugin-prettier": "^4.0.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.4.2",
     "postcss-loader": "^6.2.0",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.4.1",
     "sass": "^1.43.5",
     "sass-loader": "^12.2.0",
     "style-loader": "^3.3.0",
+    "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
