--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gsap-cursor",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "JavaScript + GreenSock customize mouse cursor with inertia for modern browsers.",
   "repository": {
     "type": "git",
@@ -16,16 +16,18 @@
     "cursor"
   ],
   "license": "MIT",
-  "main": "./dist/gsap-cursor.js",
+  "main": "./dist/gsap-cursor.module.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
-    "dist": "cross-env NODE_ENV=production webpack --config config/webpack.umd.js"
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.umd.js",
+    "publish": "cross-env NODE_ENV=production webpack --config config/webpack.umd.js & npm publish"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/preset-env": "^7.15.8",
     "babel-loader": "^8.2.2",
+    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.1.0",
     "cross-env": "^7.0.3",
